fix: date and time functionality on mobile version

--- a/public/stylesheets/mobile-responsive/booking_form_style-mobile-responsive.css
+++ b/public/stylesheets/mobile-responsive/booking_form_style-mobile-responsive.css
@@ -7,12 +7,8 @@
     .booking-dateandtime-picker-container{
         grid-template-columns: 100%;
     }
-    /*#service-booking-dueDate{
-        color: red;
-        content: attr(placeholder);
-    }
     #service-booking-dueDate[type='date']:after {
         color: #213e53;
         content: attr(placeholder);
-    }*/
+    }
 }
